[project]
requires-python = ">=3.12"
name = "openrc-dbus-launch"
dynamic = ["version"]
description = "-"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = [
    "click>=8.3.2",
    "prompt-toolkit>=3.0.52",
    "pyrefly>=0.61.0",
]

[project.urls]
Repository = "https://github.com/dsafxP/openrc-dbus-launch.git"
Issues = "https://github.com/dsafxP/openrc-dbus-launch/issues"
Documentation = "https://github.com/dsafxP/openrc-dbus-launch/wiki"

[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "cython"]

[dependency-groups]
dev = [
    "prek>=0.3.9",
    "pyrefly>=0.61.0",
    "ruff>=0.15.10",
]

[tool.pyrefly]
python-version = "3.12"
python-interpreter = ".venv/bin/python3"
