# Development-only pyproject.toml for editable installations. (See: TODO.md)
# Authoritative build definition lives in meson.build.

[project]
name = "openrc-dbus-launch"
requires-python = ">=3.12"
dynamic = ["version"]
description = "OpenRC launcher wrapper for dbus-broker"
license = "BSD-2-Clause"
dependencies = [
    "click>=8.3.3",
    "jeepney>=0.8",   # the only justified runtime dep: D-Bus protocol
    "prompt-toolkit>=3.0.52",
]

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[dependency-groups]
dev = [
    "pyrefly>=0.61.0",
    "ruff>=0.11",
]
