# Development-only pyproject.toml for editable installations. (See: TODO.md)
# Authoritative build definition lives in meson.build.

[project]
name = "openrc-dbus-launch"
requires-python = ">=3.12"
dynamic = ["version"]
description = "OpenRC launcher wrapper for dbus-broker"
license = "BSD-2-Clause"
dependencies = [
    "click>=8.3.3",
    "jeepney>=0.8",   # the only justified runtime dep: D-Bus protocol
    "prompt-toolkit>=3.0.52",
]

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[dependency-groups]
dev = [
    "prek>=0.3.9",
    "pyrefly>=0.60.0",
    "ruff>=0.14.14",
]

[tool.uv]
package = false

[tool.pyrefly]
python-version = "3.12"
python-interpreter = ".venv/bin/python3"
search-path = ["src/openrc_dbus_launch"]
